log/build_2025-02-07_14-58-09/ar_loc_base/stderr.log
  File "/home/GTL/apaul/ros2_hw1/install/ar_loc_base/lib/python3.10/site-packages/ar_loc_base/rover_pf.py", line 58
    vpred= #Equation to be completed
           ^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax

